kyverno-policies/tests/policies/mtls-resources.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: test-peer-auth-pass
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: test-peer-auth-fail
  namespace: istio-system
  annotations:
    policies.kyverno.io/scored: "false"
spec:
  mtls:
    mode: PERMISSIVE
