kyverno-policies/tests/policies/patched-namespace-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace-1
  labels:
    istio.io/rev: asm-1-23
