kyverno-policies/tests/policies/patched-namespace-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace-2
  labels:
    istio.io/rev: asm-1-23
