kyverno-policies/tests/policies/resource-limits-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
  annotations:
    policies.kyverno.io/title: Require Resource Limits and Requests
    policies.kyverno.io/category: Resource Constraints
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Requires all containers in Deployments to have memory and CPU resource requests and limits set.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-resource-limits
    match:
      any:
      - resources:
          kinds:
          - Deployment
    exclude:
      any:
      - resources:
          namespaces:
          - policies-test-spot
          - policies-test-istio-rev
    validate:
      message: "Resource requests and limits are required for all containers in Deployments"
      pattern:
        spec:
          template:
            spec:
              containers:
                - resources:
                    limits:
                      memory: "*"
                      cpu: "*"
