kyverno-policies/tests/policies/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: spot-namespace
    labels:
      worker-type: spot
  - name: non-spot-namespace
    labels:
      worker-type: regular
